# D3vz API/Controllers/DBAPI/IBaseController.cs
@@ -2,10 +2,10 @@
 
 namespace D3vz_API.Controllers.DBAPI {
     public interface IBaseController {
-        IActionResult Add(string nm_user, string email, string senha, string cpf, DateTime dt_nasc, string[] interesses);
+        IActionResult Add(object jsonObject);
+        IActionResult Update(object jsonObject);
         IActionResult Delete(int Id);
         IActionResult Get(long id);
-        IActionResult Get(string email);
-        IActionResult Update(long id, string? nm_user, string? email, string? senha, string? cpf, DateTime? dt_nasc, string[] interesses);
+        IActionResult Get(string email, string discriminacao);
     }
 }
